possible fix for squishy image on live android phone

--- a/08-slider/style.css
+++ b/08-slider/style.css
@@ -198,6 +198,7 @@ footer {
   .slide {
     justify-content: center;
     margin: 1vw;
+    min-height: 667px;
   }
 
   .slide .testimony {
